Simplify config: all exchanges/intervals enabled, add secrets.yaml access
- Remove exchanges selection - all 6 exchanges always enabled
- Remove intervals selection - all 15 intervals always fetched
- Keep symbols as user-editable list
- Add access to /config/secrets.yaml for API keys
- Update translations

--- a/translations/en.json
+++ b/translations/en.json
@@ -36,17 +36,9 @@
       "name": "Log Level",
       "description": "Application logging verbosity"
     },
-    "exchanges": {
-      "name": "Exchanges",
-      "description": "List of cryptocurrency exchanges to fetch data from (binance, coinbase, kraken, bybit, kucoin, okx)"
-    },
     "symbols": {
       "name": "Trading Pairs",
-      "description": "List of trading pair symbols to track (e.g., BTC/USDT, ETH/USDT)"
-    },
-    "intervals": {
-      "name": "Candle Intervals",
-      "description": "Candlestick time intervals to fetch (1m, 5m, 15m, 1h, 4h, 1d, 1w)"
+      "description": "List of trading pair symbols to track (e.g., BTC/USDT, ETH/USDT). API keys can be stored in secrets.yaml"
     },
     "fetch_interval_minutes": {
       "name": "Fetch Interval (minutes)",
