--- a/translations/ru.json
+++ b/translations/ru.json
@@ -43,6 +43,26 @@
     "fetch_interval_minutes": {
       "name": "Интервал обновления (минуты)",
       "description": "Как часто загружать новые данные свечей с бирж"
+    },
+    "analysis_enabled": {
+      "name": "Включить анализ",
+      "description": "Включить анализ рынка (Fear & Greed, деривативы, скоринг)"
+    },
+    "analysis_interval_hours": {
+      "name": "Интервал анализа (часы)",
+      "description": "Как часто запускать анализ рынка (1-24 часа)"
+    },
+    "alert_on_strong_signals": {
+      "name": "Оповещения о сильных сигналах",
+      "description": "Отправлять уведомления при обнаружении сильных сигналов покупки/продажи"
+    },
+    "alert_threshold_buy": {
+      "name": "Порог сигнала покупки",
+      "description": "Порог скора для сильных сигналов покупки (50-100)"
+    },
+    "alert_threshold_sell": {
+      "name": "Порог сигнала продажи",
+      "description": "Порог скора для сильных сигналов продажи (0-50)"
     }
   }
 }
